openshift/worker_beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: gnome-nepal-worker
        image: ghcr.io/gnome-nepal/site-server/gnome-nepal-worker-beat:nightly
        command: ["/bin/sh", "-c", "celery -A core worker -l info --concurrency=1"]
